# ExtendedQtCalculator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
imports/Qml/CalculatorComponents/: qmldir
imports/Qml/Themes/: DarkStyle.qml
src/: main.qml
